Fixed Whitespace and Column Hover

--- a/src/style.css
+++ b/src/style.css
@@ -165,16 +165,27 @@ table {
 
 table thead {
     border-bottom: 1px solid #00A9A3;
+    user-select: none;
 }
 
 table tfoot {
     border-top: 1px solid #00A9A3;
 }
 
+table thead th:hover {
+    color: #fff;
+    cursor: pointer;
+}
+
 .member-table td {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+.member-table td:nth-child(1):hover {
+    color: #fff;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
@@ -295,85 +306,7 @@ table tfoot {
     visibility: hidden;
     white-space: nowrap;
     z-index: 1;
-}
-
-[data-tooltip].tooltip-top::before {
-    border-style: solid;
-    border-width: 0.3rem;
-    content: "";
-    opacity: 0;
-    position: absolute;
-    transition: opacity 0.2s;
-    visibility: hidden;
-    border-color: rgba(51, 51, 51, 0.9) transparent transparent transparent;
-    top: 0;
-    left: 50%;
-    margin-left: -0.3rem;
-}
-
-[data-tooltip].tooltip-top::after {
-    bottom: 100%;
-    left: 50%;
-    transform: translate(-50%);
-}
-
-[data-tooltip].tooltip-bottom::before {
-    border-style: solid;
-    border-width: 0.3rem;
-    content: "";
-    opacity: 0;
-    position: absolute;
-    transition: opacity 0.2s;
-    visibility: hidden;
-    border-color: transparent transparent rgba(51, 51, 51, 0.9) transparent;
-    bottom: 0;
-    left: 50%;
-    margin-left: -0.3rem;
-}
-
-[data-tooltip].tooltip-bottom::after {
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%);
-}
-
-[data-tooltip].tooltip-left::before {
-    border-style: solid;
-    border-width: 0.3rem;
-    content: "";
-    opacity: 0;
-    position: absolute;
-    transition: opacity 0.2s;
-    visibility: hidden;
-    border-color: transparent transparent transparent rgba(51, 51, 51, 0.9);
-    top: 0.3rem;
-    right: calc(110% - 0.3rem);
-    margin-top: -0.3rem;
-}
-
-[data-tooltip].tooltip-left::after {
-    top: -0.3rem;
-    right: calc(110% + 0.3rem);
-}
-
-[data-tooltip].tooltip-right::before {
-    border-style: solid;
-    border-width: 0.3rem;
-    content: "";
-    opacity: 0;
-    position: absolute;
-    transition: opacity 0.2s;
-    visibility: hidden;
-    border-color: transparent rgba(51, 51, 51, 0.9) transparent transparent;
-    top: 50%;
-    top: 0.3rem;
-    left: calc(110% - 0.3rem);
-    margin-top: -0.3rem;
-}
-
-[data-tooltip].tooltip-right::after {
-    top: -0.3rem;
-    left: calc(110% + 0.3rem);
+    transform: translate(-70%);
 }
 
 @media (max-width: 767px) {
@@ -394,8 +327,7 @@ table tfoot {
     }
 }
 
-[data-tooltip]:hover::after,
-[data-tooltip][class*=tooltip-]:hover::before {
+[data-tooltip]:hover::after {
     visibility: visible;
     opacity: 1;
 }
